k8s/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-redis-service
  namespace: dev
  labels:
    app: springboot-redis
spec:
  selector:
    app: springboot-redis
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
