k8s/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-redis-service
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: springboot-redis-service.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: springboot-redis-service
                port:
                  number: 8080
